--- a/TestApp/src/app/config/config.component.html
+++ b/TestApp/src/app/config/config.component.html
@@ -1,10 +1,39 @@
-<h3>Get configuration from JSON file</h3>
-<div>
+<style>
+  button {
+    background-color: rgb(199, 238, 23);
+    border: round;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+  }
+</style>
+<div style="text-align: center">
   <!-- <button (click)="clear(); showConfig()">Get</button>
   <button (click)="clear(); showConfigResponse()">GetResponse</button>
   <button (click)="clear()">clear</button>
   <button (click)="clear(); makeError()">error</button> -->
   <button><a href="seleniumReports.html">Run Selenium Tests</a></button>
+  <!--<button><a href="../TestResults/tmp/protractorReports.html">Run Protractor Tests</a></button>-->
+  <span *ngIf="message">
+    <p>Heroes API URL is "{{message}}"</p>
+    <div *ngIf="headers">
+      Response headers:
+      <ul>
+        <li *ngFor="let header of headers">{{header}}</li>
+      </ul>
+    </div>
+  </span>
+</div>
+<div style="padding: 10px"></div>
+<div style="text-align: center">
+  <!-- <button (click)="clear(); showConfig()">Get</button>
+  <button (click)="clear(); showConfigResponse()">GetResponse</button>
+  <button (click)="clear()">clear</button>
+  <button (click)="clear(); makeError()">error</button> -->
+  <!--<button><a href="../TestResults/seleniumReports.html">Run Selenium Tests</a></button>-->
   <button><a href="protractorReports.html">Run Protractor Tests</a></button>
   <span *ngIf="message">
     <p>Heroes API URL is "{{message}}"</p>
@@ -20,7 +49,7 @@
 <div id="mainContainer">{{body}}</div>
 
 
-<!-- 
+<!--
 Copyright 2017-2018 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
